--- a/static/css/main.css
+++ b/static/css/main.css
@@ -138,14 +138,14 @@ body {
   text-align: left;
 }
 .social {
-  font-size: 5em;	
   padding-top: 12px;
-  word-spacing: 25px;
+  letter-spacing: 10px;
 }
+
 .social h4 > a {
-  font-size: 3em;	
   color: #000000;
 }
+
 .avatar {
   padding-top: 5%;
 }
