--- a/static/css/main.css
+++ b/static/css/main.css
@@ -93,6 +93,7 @@ body {
   max-width: 800px;
   text-align: center;
 }
+
 .container .text-muted {
   margin: 20px 0;
 }
@@ -147,7 +148,7 @@ body {
 }
 
 .avatar {
-  padding-top: 5%;
+  padding-top: 2%;
 }
 .avatar img {
 	height: 30%;
@@ -173,6 +174,30 @@ body {
   text-align: left;
   line-height: 30px;
   font-size: 18px;
+}
+
+@media (max-width: 767px) {
+	.container h3 {
+		font-size: 20px;
+	}
+	
+	.ai-3x, .fa-3x {
+		font-size: 2em;
+	}
+	
+	.container .bibliography {
+		font-size: 120%;
+	}
+}
+
+@media (max-width: 420px) {
+	.container h3 {
+		font-size: 18px;
+	}
+	
+	.container .bibliography {
+		font-size: 100%;
+	}
 }
 
 /* Footer 
